2006-02-14 Pol Vinogradov <vin.public@gmail.com>
	* init.d/keymap.sh, init.d/keymap.conf: added posibility to set
		CONSOLECHARS_ARGS for many consoles, not only the first one

2006-01-18 Arwed v. Merkatz <v.merkatz@gmx.net>
	* init.d/devices: re-enable udevstart for now, coldplug needs to wait
	  for the required disc devices to come up so mountall.sh doesn't fail.
	  Until that is the case we want udevstart to run.
	* DETAILS: updated PATCHLEVEL

2006-01-16 Arwed v. Merkatz <v.merkatz@gmx.net>
	* init.d/devices: use 'builtin echo' to disable hotplug so it works,
	  don't run udevstart anymore (handled by the coldplug init script
	  from udev) on kernels >= 2.6.15
	* DETAILS: updated PATCHLEVEL

2005-12-18 David Brown <dmlb2000@gmail.com>
	* init.d/devices: suggestions from arwed to change kernel.hotplug

2005-12-18 David Brown <dmlb2000@gmail.com>
	* init.d/devices: fix uname -r parsing (bug #10221)

2005-12-17 Treeve Jelbert <treeve01@pi.be>
	* init.d/devices: refine previous fix
	  fix bug #10221

2005-12-16 Treeve Jelbert <treeve01@pi.be>
	* init.d/devices: change parsing of minor version
	  fix bug #10221

2005-12-12 Treeve Jelbert <treeve01@pi.be>
	* init.d/devices: ensure that no hotplug multiplexer for linux >= 2.6.15

2005-12-12 Treeve Jelbert <treeve01@pi.be>
	* init.d/devices: don't set hotplug multiplexer for linux >= 2.6.15
	* DETAILS: Updated UPDATED to force rebuild

2005-10-12 Flavien Bridault <disk@sourcemage.org>
	* init.d/devices: Now uses udevsend as the hotplug multiplexer, when using
	  udev of course ;-)

2005-08-29 Jeremy Blosser <jblosser-smgl@firinn.org>
	* files/auto_init: Replace use of (/usr/bin/)grep with /bin/expr so it
	  works before /usr is mounted.
	* DETAILS: Updated UPDATED again to make sure people get this fix.

2005-08-29 Jeremy Blosser <jblosser-smgl@firinn.org>
	* DETAILS: Updated UPDATED to make sure init scripts can use some of
	  these new features.

2005-08-26 Sergey Lipnevich <sergey@sourcemage.org>