@@ -1,15 +1,24 @@
 # Sets the proper keymap for the particular keyboard connected to this system.
-KEYMAP=us
+KEYMAP=fi-latin9
 
-# Enables the Euro sign on the console.
-ENABLE_EURO=no
+# Enables the Euro sign on the console. (Notice: This setting is only 
+# used by console-tools, not kbd.)
+ENABLE_EURO=
 
-# Arguments passed to the consolechars program. You may wish to use this
-# setting to change the console font and charmap settings.
-# For example to setup french font and charmap use:
+# Below are arguments passed to the consolechars and kbd programs. You 
+# may wish to use this setting to change the console font and charmap 
+# settings.
+# Only one of these variables is used depending on which program you 
+# have installed. (consolechars is installed by the console-tools spell 
+# and kbd by the kbd spell.)
+# For example to setup Frech font and charmap with consolechars use:
 #  CONSOLECHARS_ARGS="-f lat1-16 -m iso15"
+# Synonymous arguments for setfont are:
+#  SETFONT_ARGS="lat0-16 -m 8859-15"
 CONSOLECHARS_ARGS=
+SETFONT_ARGS=
 
 # This variable contains numbers of console nodes in /dev/ on which
-# fonts and charmap given in CONSOLECHARS_ARGS will be set
+# fonts and charmap given in CONSOLECHARS_ARGS and SETFONT_ARGS will be 
+# set.
 TTY_NUMS="1 2 3 4 5 6"
