@@ -1,3 +1,9 @@
+2006-02-14 Juuso Alasuutari <juuso.alasuutari@tamperelainen.org>
+	* init.d/keymap.conf: added new variable SETFONT_ARGS for 
+	  setfont support from kbd spell
+	* init.d/keymap.sh: support for both consolechars and setfont 
+	  with separate argument variables
+
 2006-02-14 Pol Vinogradov <vin.public@gmail.com>
 	* init.d/keymap.sh, init.d/keymap.conf: added posibility to set
 		CONSOLECHARS_ARGS for many consoles, not only the first one
